--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,59 +1,390 @@
-.logo{
-    padding-left: 20%;
+/* @media (max-width: 1920)and (min-width:1025) { */
+.logooo {
+  padding-left: 20%;
+  padding-top: 7%;
+  padding-bottom: 2%;
+  display: flex;
+  width: 80%;
+}
+.logoimg1 {
+  width: 230px;
+  height: 230px;
+}
+.name1 {
+  margin-left: 3%;
+  margin-top: 3%;
+  width: 600px;
+  height: 150px;
+}
+.font-the-h {
+  margin-left: 30%;
+  margin-top: 12%;
+  font-size: xxx-large;
+  font-style: oblique;
+}
+.imgshome {
+  width: 80%;
+  margin: 0% 10%;
+  max-height: 500px;
+  box-shadow: 2px 0px 70px rgb(43 41 11);
+  border-radius: 14cap;
+}
+.imgshomeall {
+  position: relative;
+  width: 100%;
+  max-height: 520px;
+  overflow: hidden;
+}
+
+.image {
+  /* position: absolute; */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  max-height: 520px;
+  object-fit: cover;
+  border-radius: 14cap;
+  transform: scale(1.1); /* الصورة تبدأ بمقياس أكبر قليلاً */
+  transform-origin: center; /* نقطة التحول ستكون من المركز */
+  transition: opacity 2s ease, transform 0.5s ease; /* التحول التدريجي للشفافية والحجم */
+}
+
+.im1 {
+  width: 100%;
+  max-height: 520px;
+  object-fit: cover;
+  border-radius: 14cap;
+}
+.image.active {
+  opacity: 1;
+  transform: scale(1); /* الصورة تتحول إلى الحجم الطبيعي */
+  z-index: 1;
+}
+
+.image:not(.active) {
+  z-index: 0;
+  transform: scale(0.9); /* Squeeze out effect for inactive images */
+}
+
+.half {
+  max-height: 520px;
+  width: 100%;
+  border-top-left-radius: 14cap;
+  border-bottom-left-radius: 14cap;
+}
+.half img {
+  width: 100%;
+  height: 520px;
+  object-fit: cover;
+  border-top-left-radius: 14cap;
+  border-bottom-left-radius: 14cap;
+}
+.half2 {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-top-right-radius: 14cap;
+  border-bottom-right-radius: 14cap;
+}
+.div222 {
+  max-height: 520px;
+  display: flex;
+  margin-bottom: 15%;
+  /* border: 2px solid rgb(84, 188, 252); */
+}
+.font_h-ener {
+  text-shadow: 3px 6px 5px #888888;
+  margin-left: 16%;
+  margin-top: 15%;
+  font-size: 40px;
+  font-style: oblique;
+}
+.btn1 {
+  width: 35%;
+  margin-left: 30%;
+  margin-top: 6%;
+  color: #101010a3;
+  background-color: #0202023b; /* تغيير لون الخلفية عند المرور */
+  font-size: 38px;
+  font-style: initial;
+  border: none;
+  padding: 10px 30px;
+  border-radius: 10px;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+}
+.btn1:hover {
+  color: #e1d8ce;
+  background-color: #1e83d0a3;
+  box-shadow: 6px 6px 15px rgba(0, 0, 0, 0.3); /* تكبير الظل عند التفاعل */
+}
+.p_home {
+  justify-content: center;
+  display: flex;
+  color: #0000007a;
+}
+/* } */
+/* جوالات صغيرة */
+@media (width<= 480px) {
+  .logooo {
+    justify-content: center;
+    padding-left: 7%;
     padding-top: 12%;
-    padding-bottom: 0%;
+    padding-bottom: 5%;
     display: flex;
-}
-.name1{
+    width: 75%;
+  }
+  .logoimg1 {
+    width: 54px;
+    height: 64px;
+  }
+  .name1 {
+    margin-left: 0%;
+    margin-top: 1%;
+    width: 204px;
+    height: 65px;
+  }
+  .p_home {
+    justify-content: center;
+    display: flex;
+    font-size: medium;
+    margin: 1% 8%;
+    color: #0000007a;
+  }
+  .font-the-h {
     margin-left: 3%;
-    margin-top: 3%;
-}
-.font-the-h{
-    margin-left: 30%;
-    margin-top: 3%;
-    font-size: xxx-large;
+    margin-top: 14%;
+    font-size: large;
     font-style: oblique;
-}
-.imgshome{
+    display: flex;
+    justify-content: center;
+  }
+  .imgshome {
+    height: 150px;
     width: 80%;
-    margin: 0% 10%;
-    max-height: 500px;
     box-shadow: 2px 0px 70px rgb(43 41 11);
     border-radius: 14cap;
-}
-.half{
-    margin-left: 0;
+  }
+  .half img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     border-top-left-radius: 14cap;
     border-bottom-left-radius: 14cap;
-    max-height: 500px;
-    width: 50%;
-}
-.div222{
-    max-height: 500px;
-    display: flex;
-    border: 2px solid rgb(84, 188, 252);
-}
-.font_h-ener{
-    text-shadow: 3px 6px 5px #888888;
-    margin-left: 16%;
-    margin-top: 15%;
-    font-size: 40px;
-    font-style: oblique;
-}
-.btn1{
-    width: 40%;
-    margin-left: 30%;
-    margin-top: 6%;
-    background-color: #e5e3c2;
-    font-size: 38px;
+  }
+  .half2 {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-top-right-radius: 14cap;
+    border-bottom-right-radius: 14cap;
+  }
+  .btn1 {
+    margin-left: 15%;
+    margin-top: 8%;
+    color: #101010a3;
+    background-color: #0202023b;
+    font-size: 12px;
     font-style: initial;
     border: none;
-    padding: 10px 30px;
+    padding: 7px 18px;
     border-radius: 10px;
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
     cursor: pointer;
-}
-.btn1:hover {
-    background-color: #e0e0c0; /* تغيير لون الخلفية عند المرور */
-    box-shadow: 6px 6px 15px rgba(0, 0, 0, 0.3); /* تكبير الظل عند التفاعل */
+    width: 60%;
   }
+  .font_h-ener {
+    text-shadow: 3px 6px 5px #888888;
+    margin-left: 4%;
+    margin-top: 23%;
+    font-size: 15px;
+    font-style: oblique;
+  }
+  .pppppp {
+    flex: 1;
+  }
+  .im1 {
+    width: 100%;
+    max-height: 520px;
+    object-fit: cover;
+    border-radius: 14cap;
+  }
+}
+
+/* جوالات  كبيرة */
+@media (width<= 768px) and (width> 480px) {
+  .logooo {
+    justify-content: center;
+    padding-left: 11%;
+    padding-top: 12%;
+    padding-bottom: 5%;
+    display: flex;
+    width: 75%;
+  }
+  .logoimg1 {
+    width: 82px;
+    height: 85px;
+  }
+  .name1 {
+    margin-left: 0%;
+    margin-top: 1%;
+    width: 248px;
+    height: 79px;
+  }
+  .p_home {
+    justify-content: center;
+    display: flex;
+    font-size: medium;
+    margin: 1% 8%;
+    color: #0000007a;
+  }
+  .font-the-h {
+    margin-left: 3%;
+    margin-top: 11%;
+    margin-bottom: 4%;
+    font-size: large;
+    font-style: oblique;
+    display: flex;
+    justify-content: center;
+  }
+  .imgshome {
+    height: 199px;
+    width: 80%;
+    box-shadow: 2px 0px 26px rgb(43 41 11);
+    border-radius: 14cap;
+  }
+  .half img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-top-left-radius: 14cap;
+    border-bottom-left-radius: 14cap;
+  }
+  .half2 {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-top-right-radius: 14cap;
+    border-bottom-right-radius: 14cap;
+  }
+  .btn1 {
+    margin-left: 15%;
+    margin-top: 8%;
+    color: #101010a3;
+    background-color: #0202023b;
+    font-size: 12px;
+    font-style: initial;
+    border: none;
+    padding: 7px 18px;
+    border-radius: 10px;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    width: 60%;
+  }
+  .font_h-ener {
+    text-shadow: 3px 6px 5px #888888;
+    margin-left: 4%;
+    margin-top: 23%;
+    font-size: 15px;
+    font-style: oblique;
+  }
+  .pppppp {
+    flex: 1;
+  }
+  .im1 {
+    width: 100%;
+    max-height: 520px;
+    object-fit: cover;
+    border-radius: 14cap;
+  }
+}
+/* تابليت */
+@media (width<= 1024px) and (width> 768px)  {
+  .logooo {
+    justify-content: center;
+        padding-left: 11%;
+        padding-top: 10%;
+        padding-bottom: 5%;
+        display: flex;
+        width: 75%;
+    }
+
+  .logoimg1 {
+    width: 135px;
+    height: 141px;
+  }
+  .name1 {
+    margin-left: 0%;
+    margin-top: 1%;
+    width: 435px;
+    height: 146px;
+  }
+  .p_home {
+    justify-content: center;
+    display: flex;
+    font-size: 18px;
+    color: #0000007a;
+    margin: 3% 10% 3% 11%
+  }
+  .font-the-h {
+    margin-left: 3%;
+    margin-top: 13%;
+    margin-bottom: 5%;
+    font-size: x-large;
+    font-style: oblique;
+    display: flex;
+    justify-content: center;
+  }
+  .imgshome {
+    height: 312px;
+    width: 80%;
+    box-shadow: 2px 0px 26px rgb(43 41 11);
+    border-radius: 14cap;
+  }
+  .half img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-top-left-radius: 14cap;
+    border-bottom-left-radius: 14cap;
+  }
+  .half2 {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-top-right-radius: 14cap;
+    border-bottom-right-radius: 14cap;
+  }
+  .btn1 {
+    margin-left: 15%;
+    margin-top: 8%;
+    color: #101010a3;
+    background-color: #0202023b;
+    font-size: 12px;
+    font-style: initial;
+    border: none;
+    padding: 7px 18px;
+    border-radius: 10px;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    width: 60%;
+  }
+  .font_h-ener {
+    text-shadow: 3px 6px 5px #888888;
+    margin-left: 4%;
+    margin-top: 23%;
+    font-size: 33px;
+    font-style: oblique;
+  }
+  .pppppp {
+    flex: 1;
+  }
+  .im1 {
+    width: 100%;
+    max-height: 520px;
+    object-fit: cover;
+    border-radius: 14cap;
+  }
+}
