--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,4 @@
-.header {
+/* .header {
   box-shadow: 4px 14px 54px rgb(123 119 119);
   margin-top: -0.5%;
   width: 99%;
@@ -26,10 +26,6 @@
   height: 45%;
   width: 58%;
   padding: 0 2%;
-  /* display: flex;
-  position: absolute; */
-  /* word-wrap: break-word;
-  text-overflow: ellipsis; */
 }
 .forsearch {
   position: absolute;
@@ -47,4 +43,120 @@
   background: #faf7ab;
 }
 @media (max-) {
+} */
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #DAE3F3  ;
+  opacity: 1;
+  box-shadow: 0 10px 6px rgba(0, 0, 0, 0.1);
+  padding: 0px 2%;
+  
 }
+
+.logo img {
+  width: 100px;
+  height: 100px;
+  margin-right: 20px;
+}
+.transfers {
+  display: flex;
+  gap: 20px;
+}
+
+.linksss {
+  text-decoration: none;
+  color: #333;
+  padding: 4px 17px;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.linksss:hover {
+  background-color: #333;
+  color: #fff;
+  border-radius: 5px;
+}
+
+.forsearch {
+  display: flex;
+  align-items: center;
+}
+
+.inputname {
+  padding:20px 50px 20px 20px;
+  border: 1px solid #ccc;
+  border-radius: 29px;
+  margin-right: 10px;
+  background-color: rgba(1, 1, -1, 0.1);
+}
+
+.bsearch {
+  background-color: #333;
+  color: #fff;
+  border: none;
+  padding: 8px 15px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.bsearch:hover {
+  background-color: #555;
+}
+/* Media Queries لتحسين التوافق مع أحجام الشاشات المختلفة */
+@media (max-width: 768px) {
+  .header {
+    display: none; }}
+  
+
+  
+  /* .hide {
+    display: none; /* أو يمكنك استخدام visibility: hidden; حسب احتياجاتك */
+  /* }  */
+
+  .searchdiv{
+    position: absolute;
+    /* bottom: 10px; */
+    top: 16%;
+
+    right: 0%;
+    display: flex;
+    margin-top: 0%;
+  }
+  #ok{
+    position: absolute;
+    right: 8%;
+    border: 0;
+    background: none;
+    cursor: pointer;
+    color: #867e7e;
+    /* font-size: large; */
+  }
+  .selectlinksss{
+    background: none;
+    border: 0;
+    /* color: white; */
+  }
+  .selectlinksss:hover {
+    background-color: #333;
+    color: #fff;
+    border-radius: 5px;
+  }
+  @media (width<= 480px) {
+    #hoom{
+margin: 0px 0px 9px -20px;;
+    }
+  }
+  @media(width <=1024px) and (width>768px){
+    #hoom{
+      margin: -9px 2px 25px -35px;
+    }
+    .linksss {
+    text-decoration: none;
+    color: #333;
+    font-weight: bolder;
+    font-size: 11px;
+    padding: 28px 5px 28px 2px;
+    transition: background-color 0.3s, color 0.3s;}
+  }
