--- a/src/components/AddProduct/AddProduct.css
+++ b/src/components/AddProduct/AddProduct.css
@@ -28,19 +28,16 @@ h2 {
   background-color: rgba(218, 227, 243);
   padding: 4%;
   margin: auto;
+  display: flex;
+  position: fixed;
   border-radius: 2%;
-  width: 60%;
-  height: 88%;
+  width: 80%;
+  height: 80%;
   max-width: 80%;
   max-height: 80%;
+  justify-content: center;
+  align-items: center;
 }
-/* .close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-  cursor: pointer;
-} */
 .modal-overlay {
   position: fixed;
   top: 0;
@@ -51,18 +48,18 @@ h2 {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* z-index: 999; */
 }
 .iconimage {
   cursor: pointer;
 }
 .p1 {
-  display: flex;
-  flex-direction: column;
   border-radius: 20px;
   background-color: #fefeffba;
   margin: -1%;
   padding: 1%;
+  overflow: hidden;
+  overflow-y: auto; /* تفعيل التمرير العمودي */
+  max-height: calc(70vh - 60px); /* تحديد ارتفاع محتوى التمرير */
 }
 .p2 {
   display: flex;
@@ -111,7 +108,7 @@ h2 {
   padding-top: 4%;
   padding-bottom: 4%;
 }
-.pdf{
+.pdf {
   width: 60%;
   display: flex;
   margin-left: 3%;
@@ -137,7 +134,123 @@ h2 {
   margin-top: 57%;
   margin-right: 7%;
 }
-
 .upload-box p {
   pointer-events: none; /* حتى لا يتداخل النص مع النقر على الزر المخفي */
+}
+@media (width<= 1920px) and (width>=1025px) {
+  .popupWindow {
+    width: 59%;
+  }
+  .p1 {
+    size: 142%;
+    padding: 2%;
+    position: absolute;
+    right: 6%;
+    top: 11%;
+    width: 86%;
+  }
+  .p3 {
+    position: absolute;
+    bottom: 3%;
+    left: 35%;
+    gap: 177%;
+    margin: 0%;
+  }
+  .p3 .nameicons1 {
+    position: absolute;
+    bottom: 92%;
+    right: 38%;
+  }
+  .p3 .nameicons2 {
+    left: 205%;
+    position: absolute;
+    bottom: 92%;
+  }
+}
+@media (width<= 1024px) and (width> 768px) {
+  .popupWindow {
+    width: 59%;
+  }
+  .p1 {
+    size: 142%;
+    padding: 2%;
+    position: absolute;
+    right: 6%;
+    top: 11%;
+    width: 86%;
+  }
+  .p3 {
+    position: absolute;
+    bottom: 2%;
+    left: 31%;
+    gap: 130%;
+    margin: 0%;
+  }
+  .p3 .nameicons1 {
+    position: absolute;
+    bottom: 92%;
+    right: 38%;
+  }
+  .p3 .nameicons2 {
+    left: 157%;
+    position: absolute;
+    bottom: 92%;
+  }
+}
+@media (width<= 768px) and (width> 480px) {
+  .popupWindow {
+    width: 59%;
+  }
+  .p1 {
+    size: 142%;
+    padding: 2%;
+    position: absolute;
+    right: 6%;
+    top: 11%;
+    width: 86%;
+  }
+  .p3 {
+    position: absolute;
+        bottom: 3%;
+        left: 29%;
+        gap: 86%;
+        margin: 0%;
+  }
+  .p3 .nameicons1 {
+    position: absolute;
+    bottom: 92%;
+    right: 38%;
+  }
+  .p3 .nameicons2 {
+    left: 111%;
+    position: absolute;
+    bottom: 92%;
+  }
+}
+@media (width<= 480px) {
+  .p1 {
+    size: 142%;
+    padding: 2%;
+    position: absolute;
+    right: 6%;
+    top: 11%;
+    width: 86%;
+  }
+  .p3 {
+    position: absolute;
+    bottom: 5%;
+    left: 31%;
+    gap: 54%;
+    margin: 0%;
+  }
+  .p3 .nameicons1 {
+    position: absolute;
+    bottom: 92%;
+    right: 38%;
+  }
+  .p3 .nameicons2 {
+    left: 78%;
+    position: absolute;
+    bottom: 92%;
+  }
 }
