--- a/src/pages/AboutUs/AboutUs.css
+++ b/src/pages/AboutUs/AboutUs.css
@@ -9,3 +9,20 @@
   /* padding: 0 !important; إزالة أي padding غير مرغوب فيه */
   /* margin-top: 8% !important; */
 }
+.about{
+   flex: 1;
+   /* margin: 5%; */
+}
+/* @media (width<= 768px) and (width> 480px) {
+  .about{
+    flex: 1;
+    margin:15%;
+ }
+} */
+/* تابليت */
+@media (width<= 1024px) and (width> 768px) {
+  .about{
+    flex: 1;
+    /* margin-top: 30%; */
+ }
+}
