--- a/src/components/CardProductUser/ProductUser.css
+++ b/src/components/CardProductUser/ProductUser.css
@@ -42,6 +42,7 @@
 
 .Showcard .productNameuser {
   width: 100%;
+  text-align: center;
   height: auto;
   display: flex;
   justify-content: center;
