--- a/src/components/Sidepar/Sidepar.css
+++ b/src/components/Sidepar/Sidepar.css
@@ -14,6 +14,7 @@
   flex-direction: column; /* ترتيب العناصر عموديًا */
   align-items: flex-start; /* محاذاة العناصر على اليسار */
   justify-content: flex-start; /* مسافة متساوية بين العناصر */
+  overflow-y: auto;
 }
 
 .sidebar.open {
@@ -35,12 +36,17 @@
   color: black;
 }
 
+.forsearch {
+  position: relative;
+  width: 300px;
+}
 .searchside {
   margin-top: -6%;
 }
 .inputnamesid {
-  padding: 10px 20px 10px 8px;
-  margin: 6% 0% 10% -8%;
+  width: 100%;
+  padding: 10%;
+  /* margin: 6% 0% 10% -8%; */
   border: 1px solid #ccc;
   border-radius: 29px;
   background-color: rgba(1, 1, -1, 0.1);
@@ -49,31 +55,34 @@
   padding: 10px 6px 10px 25px;
   margin-right: -20px;
 }
-.enins{
+/* .enins {
   padding: 10px 26px 10px 7px;
-    margin: 5% 0% 7% -9%;
+  margin: 5% 0% 7% -9%;
   margin-right: 10px;
-}
-.okside{
+} */
+.okside {
   position: absolute;
-  top: 612px;
-  right: 3%;
   border: 0;
   background: none;
-  cursor: pointer;
   color: #867e7e;
+  right: 10px; /* المسافة بين الزر وحافة الحاوية اليمنى */
+  top: 50%; /* لجعل الزر في منتصف الحقل عموديًا */
+  transform: translateY(-50%); /* لضبط المركز العمودي للزر */
+  padding: 5px 10px;
+  cursor: pointer;
 }
-.aroks{
+.aroks {
   margin: -1% 79% 0% 0%;
 }
-.enoks{
-
+.enoks {
 }
 
 /* الشريط الجانبي في الشاشات الصغيرة */
 @media (max-width: 768px) {
   .sidebar {
-    display: flex; /* عرض الشريط الجانبي في الشاشات الصغيرة */
+    display: flex;
+    gap: 2%;
+    /* عرض الشريط الجانبي في الشاشات الصغيرة */
   }
 }
 @media (min-width: 768px) {
@@ -85,16 +94,31 @@
 /*          ///////////////////////////////    ///////////// */
 /* جوالات صغيرة */
 @media (width<= 480px) {
-    .Left{
-      font-size: small;
-    }
+  .Left {
+    font-size: small;
   }
-
-/* جوالات  كبيرة */
-@media (max-width: 768px)and (min-width:480) {
-
+  .inputnamesid {
+    width: 100%;
+    padding: 10%;
+    border: 1px solid #ccc;
+    border-radius: 29px;
+    background-color: rgba(1, 1, -1, 0.1);
+  }
+  .okside {
+    top: 49%;
+    right: 1%;
 }
-/* تابليت */
-@media (max-width: 1024)and (min-width:768) {
-
+}
+@media (width<= 768px) and (width> 480px) {
+  .inputnamesid {
+    width: 50%;
+    padding: 4% 8% 4% 4%;
+    border: 1px solid #ccc;
+    border-radius: 29px;
+    background-color: rgba(1, 1, -1, 0.1);
+  }
+  .okside {
+    top: 49%;
+    right: 37%;
+}
 }
