--- a/src/components/BtnStand/Stander.css
+++ b/src/components/BtnStand/Stander.css
@@ -1,70 +1,86 @@
 /* نافذة منبثقة */
 .popup {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    border: 1px solid #667cde;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    padding: 9px;
-    z-index: 1000;
-    width: 21%;
-    max-width: 20%;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  border: 1px solid #667cde;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 9px;
+  z-index: 1000;
+  width: 21%;
+}
+.Stand1 {
+  font-size: medium;
+}
+.Stand2 {
+  font-size: medium;
+}
+/* زر إغلاق النافذة */
+.popup button {
+  background-color: transparent;
+  border: none;
+  color: #091384;
+  font-size: 13px;
+  font-weight: bolder;
+  /* cursor: zoom-out; */
+  text-align: right;
+  float: right;
+}
+
+/* تأثير الخلفية الشفافة */
+.overlay {
+  background-color: rgba(0, 0, 0, 0.7);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+}
+.botton_item {
+  size: 20%;
+}
+.botton2 {
+  background: linear-gradient(45deg, #4c8aaf, #81c784);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0px 8px 6px rgba(0, 0, 0, 0.5);
+  transition: all 0.3s ease;
+}
+.iner {
+  padding: 10px 20px;
+  font-size: 16px;
+}
+
+.botton2:hover {
+  background: linear-gradient(45deg, #9da0ac, #666dbb);
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
+  transform: translateY(-2px);
+}
+
+.botton2:active {
+  background: linear-gradient(45deg, #2e7d32, #57a057);
+  transform: translateY(0);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.15);
+}
+/* جوالات صغيرة */
+@media (width<= 480px) {
+  .popup {
+    width: 50%;
+  }
+  .Stand1 {
+    font-size: x-small;
+    margin: 0%;
+  }
+  .Stand2 {
     font-size: xx-small;
   }
-  /* زر إغلاق النافذة */
-  .popup button {
-    background-color: transparent;
-    border: none;
-    color: #091384;
-    font-size: 13px;
-    font-weight: bolder;
-    /* cursor: zoom-out; */
-    text-align: right;
-    float: right;
-  }
-  
-  /* تأثير الخلفية الشفافة */
-  .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 999;
-  }
-  .botton_item{
-    size: 20%;
-  }
-  .botton2 {
-      background: linear-gradient(45deg, #4c8aaf, #81c784);
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      box-shadow: 0px 8px 6px rgba(0, 0, 0, 0.5);
-      transition: all 0.3s ease;
-  }
-  .iner{
-    padding: 10px 20px;
-    font-size: 16px;
-  }
-  
-  .botton2:hover {
-    background: linear-gradient(45deg, #9da0ac, #666dbb);
-    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
-    transform: translateY(-2px);
-  }
-  
-  .botton2:active {
-    background: linear-gradient(45deg, #2e7d32, #57a057);
-    transform: translateY(0);
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.15);
-  }
-  /* جوالات صغيرة */
-@media (width<= 480px) {
+
   .iner {
     top: 83%;
     margin-top: 0%;
@@ -72,23 +88,8 @@
     position: absolute;
     padding: 3px 7px;
     font-size: 7px;
-}
-    /* نافذة منبثقة */
-.popup {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    border: 1px solid #667cde;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    padding: 9px;
-    z-index: 1000;
-    width: 21%;
-    max-width: 20%;
-    font-size: xx-small;
   }
+
   /* زر إغلاق النافذة */
   .popup button {
     background-color: transparent;
@@ -100,7 +101,7 @@
     text-align: right;
     float: right;
   }
-  
+
   /* تأثير الخلفية الشفافة */
   .overlay {
     position: fixed;
@@ -110,7 +111,7 @@
     height: 100%;
     z-index: 999;
   }
-  .botton_item{
+  .botton_item {
     size: 20%;
   }
   .botton2:hover {
@@ -118,7 +119,7 @@
     box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
     transform: translateY(-2px);
   }
-  
+
   .botton2:active {
     background: linear-gradient(45deg, #2e7d32, #57a057);
     transform: translateY(0);
@@ -135,16 +136,46 @@
     position: absolute;
     padding: 4px 9px;
     font-size: 13px;
-}
+  }
+  .popup {
+    width: 55%;
+  }
+  .Stand1 {
+    font-size: small;
+    margin: 0%;
+  }
+  .Stand2 {
+    font-size: x-small;
+  }
 }
 /* تابليت */
 @media (width<= 1024px) and (width> 768px) {
   .iner {
     padding: 7px 16px;
     font-size: 10px;
-}
+  }
+
+  .popup {
+    width: 70%;
+  }
+  .Stand1 {
+    font-size: medium;
+    margin: 0%;
+  }
+  .Stand2 {
+    font-size: small;
+  }
 }
 /* حواسيب  */
 @media (width<= 1920px) and (width>=1025px) {
-
+  .popup {
+    width: 70%;
+  }
+  .Stand1 {
+    font-size: x-large;
+    margin: 0%;
+  }
+  .Stand2 {
+    font-size: large;
+  }
 }
