--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -17,7 +17,9 @@
   border-radius: 10px;
   flex-shrink: 0;
 }
-
+.ar {
+  margin-right: 13%;
+}
 /*  */
 
 .logooo {
@@ -156,6 +158,24 @@
   background-color: #1e83d0a3;
   box-shadow: 6px 6px 15px rgba(0, 0, 0, 0.3); /* تكبير الظل عند التفاعل */
 }
+.arbu:hover {
+  color: #e1d8ce;
+  background-color: #1e83d0a3;
+  box-shadow: 6px 6px 15px rgba(0, 0, 0, 0.3); /* تكبير الظل عند التفاعل */
+}
+.arbu {
+  margin-right: 22%;
+  margin-top: 5%;
+  color: #101010a3;
+  background-color: #0202023b;
+  font-size: 9px;
+  font-style: initial;
+  border: none;
+  padding: 6px 13px;
+  border-radius: 10px;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+}
 .p_home {
   font-style: oblique;
   justify-content: center;
@@ -205,7 +225,7 @@
   .imgshome {
     width: 80%;
     margin: 0% 10%;
-    max-height: 500px;
+    height: 450px;
     box-shadow: 2px 0px 70px rgb(43 41 11);
     border-radius: 4cap;
   }
@@ -217,7 +237,7 @@
   }
   .half img {
     width: 100%;
-    height: 500px;
+    height: 450px;
     object-fit: cover;
     /* border-top-left-radius: 14cap; */
     /* border-bottom-left-radius: 14cap; */
@@ -228,6 +248,12 @@
     margin-top: 19%;
     font-size: 50px;
     font-style: oblique;
+  }
+  .ar {
+    padding: 8% 0% 3% 0%;
+  }
+  .arbu {
+    font-size: 51px;
   }
   .btn1 {
     width: 49%;
@@ -249,41 +275,44 @@
 @media (width<= 480px) {
   .logooo {
     justify-content: center;
-    padding-left: 7%;
-    padding-top: 12%;
+    padding-left: 10%;
+    padding-top: 11%;
     padding-bottom: 5%;
     display: flex;
     width: 75%;
   }
+  .ar {
+    margin-right: 13%;
+  }
   .logoimg1 {
-    width: 54px;
-    height: 64px;
+    width: 50px;
+    height: 50px;
   }
   .name1 {
     margin-left: 0%;
     margin-top: 1%;
-    width: 204px;
-    height: 65px;
+    width: 150px;
+    height: 50px;
   }
   .p_home {
     justify-content: center;
     display: flex;
-    font-size: medium;
+    font-size: xx-small;
     margin: 1% 8%;
     color: #0000007a;
   }
   .font-the-h {
     margin-left: 3%;
     margin-top: 14%;
-    font-size: large;
+    font-size: x-small;
     font-style: oblique;
     display: flex;
     justify-content: center;
   }
   .imgshome {
-    height: 150px;
+    height: 107px;
     width: 80%;
-    box-shadow: 2px 0px 70px rgb(43 41 11);
+    box-shadow: 2px 0px 17px rgb(43 41 11);
     border-radius: 4cap;
   }
   .half img {
@@ -301,24 +330,24 @@
     border-bottom-right-radius: 4cap;
   }
   .btn1 {
-    margin-left: 15%;
-    margin-top: 8%;
+    margin-left: 26%;
+    margin-top: 2%;
     color: #101010a3;
     background-color: #0202023b;
     font-size: 12px;
     font-style: initial;
     border: none;
-    padding: 7px 18px;
+    padding: 6px 8px;
     border-radius: 10px;
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
     cursor: pointer;
-    width: 60%;
+    width: 42%;
   }
   .font_h-ener {
     text-shadow: 3px 6px 5px #888888;
     margin-left: 4%;
-    margin-top: 23%;
-    font-size: 15px;
+    margin-top: 16%;
+    font-size: 10px;
     font-style: oblique;
   }
   .pppppp {
@@ -389,24 +418,28 @@
     border-bottom-right-radius: 4cap;
   }
   .btn1 {
-    margin-left: 15%;
-    margin-top: 8%;
+    margin-left: 26%;
+    margin-top: 2%;
     color: #101010a3;
     background-color: #0202023b;
     font-size: 12px;
     font-style: initial;
     border: none;
-    padding: 7px 18px;
+    padding: 6px 8px;
     border-radius: 10px;
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
     cursor: pointer;
-    width: 60%;
+    width: 42%;
+  }
+  .arbu {
+    margin-top: 4%;
+    font-size: 18px;
   }
   .font_h-ener {
     text-shadow: 3px 6px 5px #888888;
     margin-left: 4%;
     margin-top: 23%;
-    font-size: 15px;
+    font-size: 16px;
     font-style: oblique;
   }
   .pppppp {
@@ -456,8 +489,7 @@
     justify-content: center;
   }
   .imgshome {
-    height: 312px;
-
+    height: 272px;
     width: 80%;
     box-shadow: 2px 0px 26px rgb(43 41 11);
     border-radius: 4cap;
@@ -490,11 +522,18 @@
     cursor: pointer;
     width: 60%;
   }
+  .arbu {
+    padding: 3px 13px;
+    margin-top: 2%;
+    font-size: 33px;
+    margin-right: 34%;
+  }
   .font_h-ener {
     text-shadow: 3px 6px 5px #888888;
     margin-left: 4%;
+    margin-right: 9%;
     margin-top: 23%;
-    font-size: 33px;
+    font-size: 27px;
     font-style: oblique;
   }
   .pppppp {
